*******************************************************************************
                          CloverETL Engine - HISTORY of RELEASES
*******************************************************************************

REL 3-0
---------
+ new RunGraph component attribute "paramsToPass"
+ dedicated graph property name "PROJECT_DIR" (absolute path to project home directory) was substituted by attribute at GraphRuntimeContext.contextURL
	- new command line attribute -contexturl <path> should be used instead of -P:PROJECT_DIR="<path>"
+ equalNulls attribute of Merge component was removed - value of this attribute was fixed on 'true' value 
+ list of components in tracking log (in console) are topologically sorted

REL 2-9-2
---------
+ Example projects using DB migrated to Derby - easy setup for newbies
+ FastSort NPE fix with non-nullable record and no default value
+ fixed XLSWriter long sheet names issue
+ fixed occasional NPE in DataIntersection
+ fixed DB2DataWriter not finishing in pipe mode
+ SQLite support improved
+ fixed ExtSort sorting composed key with nulls incorrectly
+ fixed fields delimited by "\n" - doubling backslash
+ CloverDataReader is now able to read without index file
+ fixed Reading timestamps from XLS sheets

  

REL 2-9-1
---------
+ JMS Writer - Fix of exception propagation during sending of JMS message
+ fixed HashPartition function giving negative port numbers occasionally
+ improved SFTP speed


REL 2-9-0
---------
Features:
+ XLS reading - formatted value can be obtained as a String type field if needed
+ Tracking - in final tracking summary average Rec/s and KB/s is displayed
+ LDAPWriter - possibility of changing/disabling multiseparator
+ CTL transformation has now PROJECT_DIR available
+ new AbstractPartitionFunction for Java writen PartitionFunction

Fixed:
+ PostgreSqlDataWriter and OracleDataWriter - NullPointerException fix
+ Reading of zipped MS Excel files


REL 2-8-1
---------
Features: